# signage-client-service

./: Cargo.toml  README.md  build.rs  deny.toml  metrics.json  shell.nix  signage.json  signaged.service
src/: config.rs  data.rs  main.rs  reporting.rs  util.rs
